@@ -72,6 +72,7 @@ setup(name="duplicity",
       maintainer="Kenneth Loafman <kenneth@loafman.com>",
       maintainer_email="kenneth@loafman.com",
       url="http://duplicity.nongnu.org/index.html",
+      install_requires = ['filechunkio'],
       packages = ['duplicity',
                   'duplicity.backends',],
       package_dir = {"duplicity" : "src",
